[WPT] infrastructure/assumptions/html-elements.html fails due to changes in style when all: initial is used https://bugs.webkit.org/show_bug.cgi?id=213171

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
* web-platform-tests/infrastructure/assumptions/html-elements-expected.txt:
Update test results.

Source/WebCore:

Update existing test results that now pass.

* css/CSSProperties.json:
Use initialStrokeColor (the default) rather than hardcoding the incorrect currentColor. The spec (and initialStrokeColor)
say this should be transparent.

* style/StyleBuilderCustom.h:
(WebCore::Style::ApplyPropertyBorderImageModifier::applyInitialValue):
Match the mask image NinePieceImage constructor, and set fill to true for mask image slices.

LayoutTests:

* platform/ios/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
Update test results.


Canonical link: https://commits.webkit.org/226087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263156 268f45cc-cd09-0410-ab3c-d52691b4dbfc